syntax = "proto3";
package pb;
option go_package="./;pb";

message SubmitRequest {
  int64 user_id=1;
  int32 language=2;
  string code=3;
  repeated string input=4;
  repeated string expected=5;
  int32 time_limit=6;
  int32 memory_limit=7;
  int32 total_num=8;
}

message SubmitResponse {
  int64 user_id=1;
  int32 status=2;
  int32 pass_num=3;
  int32 total_num=4;
  int32 memory_usage=5;
  int32 runtime=6;
  //@inject_tag: json:"output" form:"output"
  string output=7;
}

service Submission {
  rpc SubmitCode(SubmitRequest) returns(SubmitResponse);

}

// protoc --proto_path=. --micro_out=. --go_out=. .\submission_service.proto